--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ img {
 		
 .tyan {
     position: fixed; /* Фиксируем изображение на экране */
+	bottom: 20%; /* Центрируем по вертикали */
     left: 50%; /* Центрируем по горизонтали */
     transform: translateX(-50%); /* Корректируем центрирование */
     width: auto; /* Ширина автоматически подстраивается */
@@ -64,7 +65,7 @@ img {
         height: auto; /* Автоматическая высота на мобильных устройствах */
         width: 100%; /* Ширина 100% экрана */
         max-height: none; /* Отменяем ограничение высоты */
-        bottom: 0; /* Располагаем внизу экрана */
+        bottom: 20%; /* Центрируем по вертикали */
         left: 50%; /* Центрируем по горизонтали */
         transform: translateX(-50%); /* Корректируем центрирование */
     }
