--- a/testJury/style.css
+++ b/testJury/style.css
@@ -11,13 +11,16 @@ textarea, input[type="text"] {
 
 
 body {
-	background-color: #b5afab;
 	margin: 0;
 	font-family: Helvetica, sans-serif;
 	height: 100%; 
-	background-attachment: fixed;
 	margin: 0;
 	padding: 0;
+	background-image: url(icons/city.jpg);
+	background-repeat: no-repeat; 
+    background-size: cover; 
+    background-attachment: fixed; 
+    background-position: center;
 }
 
 .content {
@@ -90,6 +93,28 @@ textarea {
             max-height: 700px;
             width: auto;
         }
+
+.tyan {
+    position: fixed; /* Фиксируем изображение на экране */
+	bottom: 20%; /* Центрируем по вертикали */
+    left: 50%; /* Центрируем по горизонтали */
+    transform: translateX(-50%); /* Корректируем центрирование */
+    width: auto; /* Ширина автоматически подстраивается */
+    max-width: 100%; /* Ограничиваем максимальную ширину */
+    max-height: 100%; /* Ограничиваем максимальную высоту */
+    z-index: -1; /* Размещаем изображение под другими элементами */
+}
+
+@media (max-width: 768px) {
+    .tyan {
+        height: auto; /* Автоматическая высота на мобильных устройствах */
+        width: 100%; /* Ширина 100% экрана */
+        max-height: none; /* Отменяем ограничение высоты */
+        bottom: 20%; /* Центрируем по вертикали */
+        left: 50%; /* Центрируем по горизонтали */
+        transform: translateX(-50%); /* Корректируем центрирование */
+    }
+}
 
 
 /*СТАРЫЕ СТИЛИ. Сохранил на случай, если что-то отвалится*/
