--- a/testJury/style.css
+++ b/testJury/style.css
@@ -3,11 +3,7 @@
 	min-width:100vh;
 	padding-bottom:10px;
 }
-textarea, input[type="text"] {
-    width: 100%;
-    box-sizing: border-box; /* Чтобы padding и border не увеличивали ширину элемента */
-    font-size: 16px; /* Увеличьте размер шрифта, чтобы предотвратить зум */
-}
+
 
 
 body {
@@ -51,42 +47,52 @@ img {
 
 /*Поля для выставления оценок жюри*/
 #inputFields {
-	margin-left: auto;
-	margin-right: auto;
-	display:flex;
-	padding-bottom: 1.5em;
-	justify-content: center;
-	font-size:16px;
-}
-	
-.data-input {
-	font-size: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  padding-bottom: 1.5em;
+  justify-content: center;
+  font-size: 16px;
 }
 
-select {
-	width: 4em;
-	line-height: 1.3;
-	margin: 0;
-	border: 2px solid #aaa;
-	font-size: 16px;
-	padding: 10px;
-	margin-bottom: 10px;
-}
-
-textarea {
-	width: 14em;
-	height: 4em; 
-	font-size: 16px;
-	padding: 10px;
-	margin-bottom: 10px;
-	border: 2px solid #aaa;
+.input-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Центрируем элементы по горизонтали */
+  width: 100%;
 }
 
 .input-row {
-	font-size: 1.4em;
-	margin-left: 0.7em;
-	margin-right:0.7em;
-	text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.4em;
+  margin: 0.7em;
+  text-align: center;
+}
+
+.data-input {
+  font-size: 16px;
+  margin: 0 0.5em; /* Добавляем небольшой отступ между элементами */
+}
+
+select {
+  width: 4em;
+  line-height: 1.3;
+  margin: 0;
+  border: 2px solid #aaa;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+textarea {
+  width: 14em;
+  height: 4em;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 2px solid #aaa;
 }
 
 .thumbnail {
