--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@
 body {
 	margin: 0;
 	font-family: Helvetica, sans-serif;
-	height: 100%; 
-	margin: 0;
 	padding: 0;
 	background-image: url(icons/city.jpg);
 	background-repeat: no-repeat; 
     background-size: cover; 
     background-attachment: fixed; 
     background-position: center;
+	width: 100%;
 }
 
 
