--- a/testJury/timetable.css
+++ b/testJury/timetable.css
@@ -150,7 +150,7 @@ table {
     border: none;
     text-align: left;
     outline: none;
-    font-size: 1.3em;
+    font-size: 20px;
     transition: 0.4s;
     }
 
