--- a/testJury/timetable.css
+++ b/testJury/timetable.css
@@ -7,7 +7,6 @@
     border: none;
     text-align: left;
     outline: none;
-    font-size: 1.3em;
     transition: 0.4s;
     }
 	
@@ -25,7 +24,7 @@
 .table_blur {
     background: #f5ffff;
     text-align: left;
-    font-size: 1.07em;
+    font-size: 17px;
     padding-bottom: 150px;
     max-width: 90em;
     border-collapse: collapse;
@@ -83,13 +82,13 @@
 .smort {
     background: linear-gradient(#571508, #f06559) !important;
 	font-weight: bold !important;
-	font-size: 1.1em !important;
+	font-size: 18px !important;
 	text-align: center !important; /* Градиент для плашки СМОТР в расписании  */
     }
 
 .block {
 	font-weight: bold !important;
-	font-size: 1.1em !important;
+	font-size: 18px !important;
 	text-align: center !important;
     background: linear-gradient(#082254, #5c91f2) !important; /* Градиент для плашки БЛОК № в расписании  */
     }
@@ -107,7 +106,7 @@ table {
 
 .tablinks {
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 20px;
 	color: white;
     }
 
@@ -167,6 +166,6 @@ table {
 		
 .B {
 	font-weight: bold;
-	font-size: 1.1em;
+	font-size: 18px;
 	text-align: center;
 	}
