--- a/testJury/style.css
+++ b/testJury/style.css
@@ -175,3 +175,6 @@ input[type="checkbox"] {
     /* Дополнительные стили, например, отступы, границы и др. */
     padding: 8px;
 }
+input, select, textarea {
+    font-size: 20px !important; /* Увеличиваем размер шрифта для предотвращения зума */
+}
