--- a/testJury/style.css
+++ b/testJury/style.css
@@ -86,6 +86,10 @@ textarea {
   border: 2px solid #aaa;
 }
 
+input[type="text"], textarea {
+    touch-action: manipulation;
+}
+
 input[type="checkbox"] {
   transform: scale(2);
   margin: 5px;
